--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,73 @@
 <html>
     <head>
         <title>Voxel Gallery</title>
+
+        <!-- Google Fonts -->
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+
+        <!-- CSS Reset -->
+        <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+
+        <!-- Milligram CSS minified -->
+        <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+
     </head>
     <body>
-        <img src="/assets/18.png" alt="">
-        <img src="/assets/human.jpg" alt="">
-        <img src="/assets/india.png" alt="">
-        <img src="/assets/island.png" alt="">
-        <img src="/assets/mario.jpg" alt="">
-        <img src="/assets/pikachu.png" alt="">
-        <img src="/assets/sea_shore.jpg" alt="">
-        <img src="/assets/ship.gif" alt="">
-        <img src="/assets/temple.png" alt="">
-        <img src="/assets/tree.png" alt="">
+        <h1>Voxel Gallery</h1>
+
+        <p>
+            This is my beuatiful gallery of voxel are findings. I hope that you'll enjoy my voxel art
+            findings
+        </p>
+
+        <figure>
+            <img
+                src="/assets/18.png"
+                alt="Temple in Mexico">
+            <figcaption>is it in Mexico?</figcaption>
+        </figure>
+
+        <figure>
+            <img
+                src="/assets/human.jpg"
+                alt="Man in the Blade Runner made out of voxels">
+            <figcaption>Blade Runner like scene</figcaption>
+        </figure>
+
+        <figure>
+            <img
+                src="/assets/india.png"
+                alt="India's Taj Mahal">
+            <figcaption>Beautiful India and its Taj Mahal</figcaption>
+        </figure>
+
+        <figure>
+            <img src="/assets/island.png" alt="">
+        </figure>
+
+        <figure>
+            <img src="/assets/mario.jpg" alt="">
+        </figure>
+
+        <figure>
+            <img src="/assets/pikachu.png" alt="">
+        </figure>
+
+        <figure>
+            <img src="/assets/sea_shore.jpg" alt="">
+        </figure>
+
+        <figure>
+            <img src="/assets/ship.gif" alt="">
+        </figure>
+
+        <figure>
+            <img src="/assets/temple.png" alt="">
+        </figure>
+
+        <figure>
+            <img src="/assets/tree.png" alt="">
+        </figure>
+
     </body>
 </html>
