--- a/src/index.html
+++ b/src/index.html
@@ -32,54 +32,61 @@
             findings
         </p>
 
-        <figure>
-            <img
-                src="/assets/18.png"
-                alt="Temple in Mexico">
-            <figcaption>is it in Mexico?</figcaption>
-        </figure>
+        <div
+            class="gallery">
 
-        <figure>
-            <img
-                src="/assets/human.jpg"
-                alt="Man in the Blade Runner made out of voxels">
-            <figcaption>Blade Runner like scene</figcaption>
-        </figure>
+            <figure>
+                <img
+                    src="/assets/18.png"
+                    alt="Temple in Mexico">
+                <figcaption>is it in Mexico?</figcaption>
+            </figure>
 
-        <figure>
-            <img
-                src="/assets/india.png"
-                alt="India's Taj Mahal">
-            <figcaption>Beautiful India and its Taj Mahal</figcaption>
-        </figure>
+            <figure>
+                <img
+                    src="/assets/human.jpg"
+                    alt="Man in the Blade Runner made out of voxels">
+                <figcaption>Blade Runner like scene</figcaption>
+            </figure>
 
-        <figure>
-            <img src="/assets/island.png" alt="">
-        </figure>
+            <figure>
+                <img
+                    src="/assets/india.png"
+                    alt="India's Taj Mahal">
+                <figcaption>Beautiful India and its Taj Mahal</figcaption>
+            </figure>
 
-        <figure>
-            <img src="/assets/mario.jpg" alt="">
-        </figure>
+            <figure>
+                <img src="/assets/island.png" alt="">
+            </figure>
 
-        <figure>
-            <img src="/assets/pikachu.png" alt="">
-        </figure>
+            <figure>
+                <img src="/assets/mario.jpg" alt="">
+            </figure>
 
-        <figure>
-            <img src="/assets/sea_shore.jpg" alt="">
-        </figure>
+            <figure>
+                <img src="/assets/pikachu.png" alt="">
+            </figure>
 
-        <figure>
-            <img src="/assets/ship.gif" alt="">
-        </figure>
+            <figure>
+                <img src="/assets/sea_shore.jpg" alt="">
+            </figure>
 
-        <figure>
-            <img src="/assets/temple.png" alt="">
-        </figure>
+            <figure>
+                <img src="/assets/ship.gif" alt="">
+            </figure>
 
-        <figure>
-            <img src="/assets/tree.png" alt="">
-        </figure>
+            <figure>
+                <img src="/assets/temple.png" alt="">
+            </figure>
 
+            <figure>
+                <img src="/assets/tree.png" alt="">
+            </figure>
+        </div>
+
+        <script
+            src="js/index.js"
+            type="text/javascript"></script>
     </body>
 </html>
